// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextEditor overview snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  background-color: transparent;
}

<input
    aria-label="enter some text"
    class="emotion-0"
    id="prop"
    name="prop"
    value="Hello"
  />
</DocumentFragment>
`;

exports[`TextEditor placeholder snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  background-color: transparent;
}

<input
    aria-label="enter a value for prop"
    class="emotion-0"
    id="prop"
    name="prop"
    placeholder="Enter some text"
    value=""
  />
</DocumentFragment>
`;

exports[`TextEditor textArea snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  background-color: transparent;
}

<textarea
    aria-label="enter a value for prop"
    class="emotion-0"
    id="prop"
    name="prop"
    placeholder="Enter multiple lines of text"
    rows="4"
  />
</DocumentFragment>
`;
